Atualiza o nome do pacote para `robertol/laravel-validator-ptbr`, adiciona novas regras de validação e remove a versão anterior do provider. Atualiza o arquivo `.gitignore` e o arquivo de configuração do Travis CI para suportar novas versões do PHP.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 composer.phar
 composer.lock
 .DS_Store
-pt-br-validator.sublime-project
-pt-br-validator.sublime-workspace
+laravel-validator-ptbr.sublime-project
+laravel-validator-ptbr.sublime-workspace
 /.phpintel/
 .phpunit.cache/
